--- a/botsettings.json
+++ b/botsettings.json
@@ -1,5 +1,5 @@
 {
-    "token": "Mzk0ODUyMDY2Njg3OTc1NDI2.XrHzqg.V6qycDg7fp3X7-Zar3XVKQeUpso",
+    "token": "<REDACTED>",
     "prefix": "?",
     "yt_api_key": "<REDACTED>",
     "idioticapi": "<REDACTED>",
