--- a/botsettings.json
+++ b/botsettings.json
@@ -1,5 +1,5 @@
 {
-    "token": "<REDACTED>",
+    "token": "Mzk0ODUyMDY2Njg3OTc1NDI2.XrTEIQ.fx9ucbNFS44UJwj9cr5cQS8rbo8",
     "prefix": "?",
     "yt_api_key": "<REDACTED>",
     "idioticapi": "<REDACTED>",
