--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "deep-extend": "^0.6.0",
     "discord.js": "^11.4.2",
     "enmap": "^4.0.0",
-    "erlpack": "github:hammerandchisel/erlpack",
+    "erlpack": "^0.1.3",
     "fs": "0.0.2",
     "hoek": "^6.0.0",
     "idiotic-api": "^0.2.11",
@@ -33,7 +33,7 @@
     "strict-uri-encode": "^2.0.0",
     "table": "^5.0.2",
     "urban-dictionary": "^2.2.1",
-    "ytdl-core": "^0.28.0"
+    "ytdl-core": "^2.1.1"
   },
   "devDependencies": {},
   "scripts": {
